# bioeolica-entrega

./: .gitignore  AGENTS.md  AUDITORIA_CONFORMIDADE_FSM.md  AUDITORIA_FINAL.md  AUDITORIA_HOSTIL_DUAL.md  AUDITORIA_STATUS_ENTREGA.md  CLAUDE.md  CONVENTIONS.md  GITOPS.md  INPUT.md  INPUT.md.bak  INSTRUCTIONS.md  INSTRUCTIONS.md.bak  ORQUESTRACAO_PROCESSO_LAB.md  README.md  conftest.py  pyproject.toml
.archive/: INPUT.md
.claude/: ecc-tools.json  identity.json  settings.json
.codex/: AGENTS.md
.context/: .gitattributes  .gitignore
docs/: CI-CD-MANDATORY.md  FLUXO_CANONICO_INSTRUCTIONS.md
docs-nav/: index.md  mkdocs.yml
edital/: AGENTS.md
graphify-out/: .chunk_01_files.txt  .chunk_02_files.txt  .chunk_03_files.txt  .chunk_04_files.txt  .chunk_05_files.txt  .chunk_06_files.txt  .chunk_07_files.txt  .chunk_08_files.txt  .chunk_09_files.txt  .graphify_ast.py  .graphify_chunk_01.json  .graphify_chunk_02.json  .graphify_chunk_03.json  .graphify_chunk_04.json  .graphify_chunk_05.json  .graphify_chunk_06.json  .graphify_chunk_07.json  .graphify_chunk_08.json  .graphify_detect.json  .graphify_root  .graphify_uncached.txt
knowledge/: RESEARCH_DECISIONS.md
modules/: demo_integrada.py
modules/cad-cae-platform/: README.md  pyproject.toml
modules/cad-cae-platform/app/: app.py
modules/cad-cae-platform/cad_cae_platform.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
modules/cad-cae-platform/notebooks/: cad_cae_design.ipynb
modules/cad-cae-platform/src/cad_cae/: __init__.py  cad_bridge.py  calculix_solver.py  design_optimizer.py  gmsh_mesher.py  gpu_accelerator.py  vtk_export.py
modules/cad-cae-platform/tests/: __init__.py  test_app.py  test_cad_bridge.py  test_calculix_solver.py  test_design_optimizer.py  test_gmsh_mesher.py  test_gpu_accelerator.py  test_vtk_export.py
modules/kdi-m3-bridge/: config.default.json  config.json  pyproject.toml
modules/kdi-m3-bridge/.old.modules/: config_manager.py  kdi_forwarder.py  kdi_multiphysics.py
modules/kdi-m3-bridge/app/: app.py
modules/kdi-m3-bridge/data/: mapa_unico_index.json
modules/kdi-m3-bridge/kdi_m3_bridge.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
modules/kdi-m3-bridge/src/kdi_m3/: __init__.py  config_manager.py  config_manager.py.bak  kdi_forwarder.py  kdi_macro.py  kdi_meso.py  kdi_micro.py  kdi_multiphysics.py
modules/kdi-m3-bridge/tests/: test_app.py  test_config_manager.py  test_e2e_complete.py  test_kdi_forwarder.py  test_kdi_macro.py  test_kdi_meso.py  test_kdi_micro.py  test_kdi_multiphysics.py
modules/physics-m3/: .gitignore  README.md  build_notebook.py  config.default.json  demo_completa.py  pyproject.toml  requirements.txt  validate_cad.py  validate_completo.py
modules/physics-m3/.github/workflows/: ci.yml
modules/physics-m3/app/: app.py  requirements.txt
modules/physics-m3/data/: master_index.json
modules/physics-m3/data/knowledge/: rag_index.json
modules/physics-m3/data/logs/: wal_202606.jsonl
modules/physics-m3/notebooks/: lab0_cad_workspace.ipynb  lab1_material_characterization.ipynb  lab2_structural_design.ipynb
modules/physics-m3/physics_m3_workspace.egg-info/: PKG-INFO  SOURCES.txt  SOURCES.txt.bak  entry_points.txt  requires.txt  top_level.txt
modules/physics-m3/src/: __init__.py  __main__.py  cad_visualization.py  cfd_solver.py  composite_model.py  composite_model.py.bak  context_engine.py  creep.py  crystal_lattice.py  digital_twin.py  economico.py  electromechanical.py  erosion.py  experimental_data.py  fatigue.py  fem_solver.py  fluid_dynamics.py  kinematic_machine.py  knowledge_base.py  logging_wal.py  m3_analysis.py  mapa_unico.py  mechanical_tests.py  method_selector.py  mkdelagen.py  model_calibration.py  normativo.py  peridynamics.py  piezoelectric.py  predictive_maintenance.py  scientific_writing.py  simulation_comparison.py  structural_analysis.py  thermodynamics.py  topology_optimization.py  topopt_avancada.py  topopt_manufacturing.py  topopt_multiobj.py  uncertainty.py  validacao_experimental.py  (+2 more)
modules/physics-m3/src/gpu/: __init__.py  fallback.py
modules/physics-m3/src/vvv/: __init__.py  certificate.py  orchestrator.py
modules/physics-m3/src/vvv/criteria/: __init__.py  benchmark.py  conservation.py  convergence.py  cross_code.py  stability.py  units.py
modules/physics-m3/tests/: test_app.py  test_cad_visualization.py  test_cad_viz.py  test_cfd.py  test_cfd_solver.py  test_composite_model.py  test_context_engine.py  test_creep.py  test_crystal_lattice.py  test_digital_twin.py  test_economico.py  test_electromechanical.py  test_erosion.py  test_experimental_data.py  test_fatigue.py  test_fem_config.py  test_fem_solver.py  test_fluid_dynamics.py  test_hostile_review.py  test_kinematic_machine.py  test_knowledge_base.py  test_lab0.py  test_lab1.py  test_lab2.py  test_logging_wal.py  test_m3_analysis.py  test_mandates.py  test_mapa_unico.py  test_mechanical_tests.py  test_method_selector.py  test_methods.py  test_mkdelagen.py  test_model_calibration.py  test_normativo.py  test_p1_compliance.py  test_peridynamics.py  test_piezoelectric.py  test_predictive_maintenance.py  test_scientific_writing.py  test_simulation_comparison.py  (+13 more)
modules/physics-m3/tests/test_benchmarks/: test_cantilever_beam.py  test_plate_hole_kt.py  test_wind_pressure.py
modules/physics-m3/tests/test_vvv_multiscale/: test_vvv_orchestrator.py
scripts/: audit_deps.py  audit_edital_conformity.js  check_env_mandatory.py  migrate_unify_db.py  (+4 more)
(+383 files in other folders)
