[project]
name = "bioeolica-lab"
version = "0.1.0"
description = "Laboratório virtual multi-agente: compósito papel-machê+grafite p/ gerador eólico (FINEP)"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
  "pandas>=2.1",
  "matplotlib>=3.8",
  "jsonschema>=4.20",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=4.1", "ruff>=0.4"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests", "workspace"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-ra"
filterwarnings = ["error::UserWarning"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["modules", "docs-nav", ".archives"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
ignore = ["E501"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
