[project]
name = "bioeolica-lab"
version = "0.1.0"
description = "Laboratório virtual multi-agente: compósito papel-machê+grafite p/ gerador eólico (FINEP)"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
  "pandas>=2.1",
  "matplotlib>=3.8",
  "jsonschema>=4.20",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=4.1", "ruff>=0.4"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests", "workspace"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-ra -p no:cacheprovider"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["modules", "docs-nav", ".archives"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Módulos físicos/científicos usam simbologia convencional (T_K, Vf, E_pa, D0, Q, K0).
# Renomear para snake_case degradaria legibilidade científica — exceção documentada (N803/N806/N802/N815).
# I = corrente elétrica, A = área, D = diâmetro: não ambíguos no domínio (E741).
"workspace/lab1-material-papel-mache-grafite/ensaios/**" = ["N803", "N806", "N802", "N815", "E741"]
"workspace/lab1-material-papel-mache-grafite/fabricacao/**" = ["N803", "N806", "N802", "N815", "E741"]
"workspace/lab1-material-papel-mache-grafite/sim/**" = ["N803", "N806", "N802", "N815", "E741"]
"workspace/lab1-material-papel-mache-grafite/economico/**" = ["N803", "N806", "N802", "N815", "E741"]
"workspace/lab2-gerador-eolico-savonius/**" = ["N803", "N806", "N802", "N815", "E741"]
# Testes espelham a simbologia científica dos módulos sob teste
"workspace/**/tests/**" = ["N803", "N806", "N802", "N815", "E741"]
# Pontes Lab2->Lab1 e geradores SSOT inserem sys.path antes de importar core (intencional)
"workspace/lab1-material-papel-mache-grafite/core/build_ssot.py" = ["E402"]
"workspace/lab1-material-papel-mache-grafite/tests/test_ssot_e2e.py" = ["E402"]
"workspace/lab2-gerador-eolico-savonius/l2_gerador/lab_orchestrator.py" = ["E402"]
"workspace/lab2-gerador-eolico-savonius/l2_economico/viabilidade_lab1.py" = ["E402"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
