[project]
name = "kdi-m3-bridge"
version = "0.1.0"
description = "KDI M³ bridge modules for multi-scale analysis"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [".", "src"]
include = ["modules*", "kdi_m3*", "src/kdi_m3*"]
