[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "physics-m3-workspace"
version = "1.2.0"
description = "Computational Mechanics Workspace for Multi-Scale (M³) Analysis"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Physics M³ Contributors"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "pytest>=7.0",
    "scikit-image>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest-cov>=4",
    "pytest-xdist>=3",
    "ruff>=0.1",
    "black>=23",
    "pandas>=1.5",
]
docs = ["sphinx>=7", "sphinx-rtd-theme>=1"]

[project.scripts]
physics-m3 = "modules.__main__:main"

[project.urls]
Repository = "https://github.com/bioeolica/physics-m3-workspace"
Documentation = "https://physics-m3.readthedocs.io"

[tool.setuptools.packages.find]
where = [".", "src"]
include = ["modules*", "physics_m3*"]
namespaces = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"
